modules/XForms/generated.jai


/* How to place text relative to a box */
FL_ALIGN :: enum u32 {
    CENTER       :: 0;
    TOP          :: 1;
    BOTTOM       :: 2;
    LEFT         :: 4;
    RIGHT        :: 8;
    LEFT_TOP     :: 5;
    RIGHT_TOP    :: 9;
    LEFT_BOTTOM  :: 6;
    RIGHT_BOTTOM :: 10;
    INSIDE       :: 8192;
    VERT         :: 16384;

    TOP_LEFT     :: 5;
    TOP_RIGHT    :: 9;
    BOTTOM_LEFT  :: 6;
    BOTTOM_RIGHT :: 10;

    FL_ALIGN_CENTER       :: CENTER;
    FL_ALIGN_TOP          :: TOP;
    FL_ALIGN_BOTTOM       :: BOTTOM;
    FL_ALIGN_LEFT         :: LEFT;
    FL_ALIGN_RIGHT        :: RIGHT;
    FL_ALIGN_LEFT_TOP     :: LEFT_TOP;
    FL_ALIGN_RIGHT_TOP    :: RIGHT_TOP;
    FL_ALIGN_LEFT_BOTTOM  :: LEFT_BOTTOM;
    FL_ALIGN_RIGHT_BOTTOM :: RIGHT_BOTTOM;
    FL_ALIGN_INSIDE       :: INSIDE;
    FL_ALIGN_VERT         :: VERT;

    FL_ALIGN_TOP_LEFT     :: TOP_LEFT;
    FL_ALIGN_TOP_RIGHT    :: TOP_RIGHT;
    FL_ALIGN_BOTTOM_LEFT  :: BOTTOM_LEFT;
    FL_ALIGN_BOTTOM_RIGHT :: BOTTOM_RIGHT;
}

fl_is_inside_lalign :: (align: s32) -> s32 #foreign libforms;

fl_is_outside_lalign :: (align: s32) -> s32 #foreign libforms;

fl_is_center_lalign :: (align: s32) -> s32 #foreign libforms;

fl_to_inside_lalign :: (align: s32) -> s32 #foreign libforms;

fl_to_outside_lalign :: (align: s32) -> s32 #foreign libforms;

/* Mouse buttons */
FL_2 :: enum u32 {
    MBUTTON1 :: 1;
    MBUTTON2 :: 2;
    MBUTTON3 :: 3;
    MBUTTON4 :: 4;
    MBUTTON5 :: 5;

    FL_MBUTTON1 :: MBUTTON1;
    FL_MBUTTON2 :: MBUTTON2;
    FL_MBUTTON3 :: MBUTTON3;
    FL_MBUTTON4 :: MBUTTON4;
    FL_MBUTTON5 :: MBUTTON5;
}

/*  Some special color indices for FL private colormap. It does not matter
*  what the value of each enum is, but it must start from 0 and be
*  consecutive. */
FL_PD_COL :: enum u32 {
    BLACK                :: 0;
    RED                  :: 1;
    GREEN                :: 2;
    YELLOW               :: 3;
    BLUE                 :: 4;
    MAGENTA              :: 5;
    CYAN                 :: 6;
    WHITE                :: 7;
    TOMATO               :: 8;
    INDIANRED            :: 9;
    SLATEBLUE            :: 10;
    COL1                 :: 11;
    RIGHT_BCOL           :: 12;
    BOTTOM_BCOL          :: 13;
    TOP_BCOL             :: 14;
    LEFT_BCOL            :: 15;
    MCOL                 :: 16;
    INACTIVE             :: 17;
    PALEGREEN            :: 18;
    DARKGOLD             :: 19;
    ORCHID               :: 20;
    DARKCYAN             :: 21;
    DARKTOMATO           :: 22;
    WHEAT                :: 23;
    DARKORANGE           :: 24;
    DEEPPINK             :: 25;
    CHARTREUSE           :: 26;
    DARKVIOLET           :: 27;
    SPRINGGREEN          :: 28;
    DODGERBLUE           :: 29;
    LIGHTER_COL1         :: 30;
    DARKER_COL1          :: 31;
    ALICEBLUE            :: 32;
    ANTIQUEWHITE         :: 33;
    AQUA                 :: 34;
    AQUAMARINE           :: 35;
    AZURE                :: 36;
    BEIGE                :: 37;
    BISQUE               :: 38;
    BLANCHEDALMOND       :: 39;
    BLUEVIOLET           :: 40;
    BROWN                :: 41;
    BURLYWOOD            :: 42;
    CADETBLUE            :: 43;
    CHOCOLATE            :: 44;
    CORAL                :: 45;
    CORNFLOWERBLUE       :: 46;
    CORNSILK             :: 47;
    CRIMSON              :: 48;
    DARKBLUE             :: 49;
    DARKGOLDENROD        :: 50;
    DARKGRAY             :: 51;
    DARKGREEN            :: 52;
    DARKGREY             :: 53;
    DARKKHAKI            :: 54;
    DARKMAGENTA          :: 55;
    DARKOLIVEGREEN       :: 56;
    DARKORCHID           :: 57;
    DARKRED              :: 58;
    DARKSALMON           :: 59;
    DARKSEAGREEN         :: 60;
    DARKSLATEBLUE        :: 61;
    DARKSLATEGRAY        :: 62;
    DARKSLATEGREY        :: 63;
    DARKTURQUOISE        :: 64;
    DEEPSKYBLUE          :: 65;
    DIMGRAY              :: 66;
    DIMGREY              :: 67;
    FIREBRICK            :: 68;
    FLORALWHITE          :: 69;
    FORESTGREEN          :: 70;
    FUCHSIA              :: 71;
    GAINSBORO            :: 72;
    GHOSTWHITE           :: 73;
    GOLD                 :: 74;
    GOLDENROD            :: 75;
    GRAY                 :: 76;
    GREENYELLOW          :: 77;
    GREY                 :: 78;
    HONEYDEW             :: 79;
    HOTPINK              :: 80;
    INDIGO               :: 81;
    IVORY                :: 82;
    KHAKI                :: 83;
    LAVENDER             :: 84;
    LAVENDERBLUSH        :: 85;
    LAWNGREEN            :: 86;
    LEMONCHIFFON         :: 87;
    LIGHTBLUE            :: 88;
    LIGHTCORAL           :: 89;
    LIGHTCYAN            :: 90;
    LIGHTGOLDENRODYELLOW :: 91;
    LIGHTGRAY            :: 92;
    LIGHTGREEN           :: 93;
    LIGHTGREY            :: 94;
    LIGHTPINK            :: 95;
    LIGHTSALMON          :: 96;
    LIGHTSEAGREEN        :: 97;
    LIGHTSKYBLUE         :: 98;
    LIGHTSLATEGRAY       :: 99;
    LIGHTSLATEGREY       :: 100;
    LIGHTSTEELBLUE       :: 101;
    LIGHTYELLOW          :: 102;
    LIME                 :: 103;
    LIMEGREEN            :: 104;
    LINEN                :: 105;
    MAROON               :: 106;
    MEDIUMAQUAMARINE     :: 107;
    MEDIUMBLUE           :: 108;
    MEDIUMORCHID         :: 109;
    MEDIUMPURPLE         :: 110;
    MEDIUMSEAGREEN       :: 111;
    MEDIUMSLATEBLUE      :: 112;
    MEDIUMSPRINGGREEN    :: 113;
    MEDIUMTURQUOISE      :: 114;
    MEDIUMVIOLETRED      :: 115;
    MIDNIGHTBLUE         :: 116;
    MINTCREAM            :: 117;
    MISTYROSE            :: 118;
    MOCCASIN             :: 119;
    NAVAJOWHITE          :: 120;
    NAVY                 :: 121;
    OLDLACE              :: 122;
    OLIVE                :: 123;
    OLIVEDRAB            :: 124;
    ORANGE               :: 125;
    ORANGERED            :: 126;
    PALEGOLDENROD        :: 127;
    PALETURQUOISE        :: 128;
    PALEVIOLETRED        :: 129;
    PAPAYAWHIP           :: 130;
    PEACHPUFF            :: 131;
    PERU                 :: 132;
    PINK                 :: 133;
    PLUM                 :: 134;
    POWDERBLUE           :: 135;
    PURPLE               :: 136;
    ROSYBROWN            :: 137;
    ROYALBLUE            :: 138;
    SADDLEBROWN          :: 139;
    SALMON               :: 140;
    SANDYBROWN           :: 141;
    SEAGREEN             :: 142;
    SEASHELL             :: 143;
    SIENNA               :: 144;
    SILVER               :: 145;
    SKYBLUE              :: 146;
    SLATEGRAY            :: 147;
    SLATEGREY            :: 148;
    SNOW                 :: 149;
    STEELBLUE            :: 150;
    TAN                  :: 151;
    TEAL                 :: 152;
    THISTLE              :: 153;
    TURQUOISE            :: 154;
    VIOLET               :: 155;
    WHITESMOKE           :: 156;
    YELLOWGREEN          :: 157;
    COLOR_CHOOSER_COLOR  :: 158;
    FREE_COL1            :: 159;
    FREE_COL2            :: 160;
    FREE_COL3            :: 161;
    FREE_COL4            :: 162;
    FREE_COL5            :: 163;
    FREE_COL6            :: 164;
    FREE_COL7            :: 165;
    FREE_COL8            :: 166;
    FREE_COL9            :: 167;
    FREE_COL10           :: 168;
    FREE_COL11           :: 169;
    FREE_COL12           :: 170;
    FREE_COL13           :: 171;
    FREE_COL14           :: 172;
    FREE_COL15           :: 173;
    FREE_COL16           :: 174;
    NOCOLOR              :: 2147483647;
